# tiny-agent

./: Dockerfile  README.md  yocto-setup.sh
docs/: abstract_urp.md  development_plan.md
docs/bootstrap/: first-linux-image.md
docs/bootstrap/sample-configurations/: qemu-build-config.conf  rasp-build-config.conf
docs/pty/: findings.md  information_collection.md
tiny-agent/: .gitignore  Makefile  autogen.sh  configure.ac
tiny-agent/src/: Makefile.am  pty.c
